--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span class="inline-block bg-yellow-300 text-black text-xs px-2 py-1 rounded-full font-semibold mb-2">Best Seller</span>
                 <h3 class="text-xl font-semibold">GLAMORAS Women’s Zip Front Sports Bra – High Impact Longline Criss Cross Workout Top (M–4XL)</h3>
                 <p class="text-gray-600 mt-2">Perfect for gym, yoga, or any intense workout — supportive, stylish, and easy to wear.</p>
-                <p class="mt-3 text-pink-600 font-bold text-lg">$39.99</p>
+                <p class="mt-3 text-pink-600 font-bold text-lg">₹899</p>
                 <a href="https://amzn.to/4jZBOdV" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-pink-500 hover:bg-pink-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -41,13 +41,13 @@
 
             <!-- Product 2 -->
             <div class="bg-white shadow-lg rounded-2xl overflow-hidden">
-              <img src="./public/images/fitness/bags.jpg" alt="Interactive Toy" class="w-full h-60 object-contain">
+              <img src="./public/images/fitness/gum bag.jpg" alt="Interactive Toy" class="w-full h-60 object-contain">
               <div class="p-4">
                 <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Top Pick</span>
-                <h3 class="text-xl font-semibold">JUST RIDER Men's Fitness Compression Set – Skin-Tight Long Sleeve Top & Bottom for Gym</h3>
-                <p class="text-gray-600 mt-2">Stay cool and supported during any workout with this performance-enhancing training suit.</p>
-                <p class="mt-3 text-blue-600 font-bold text-lg">$24.50</p>
-                <a href="https://amzn.to/3S0mEZB" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
+                <h3 class="text-xl font-semibold">URBAN TRIBE Fury Gym Bag – Sports Duffel with Shoe Compartment for Men & Women (Black)</h3>
+                <p class="text-gray-600 mt-2">Spacious, durable, and designed for active lifestyles – perfect for workouts, fitness, and travel.</p>
+                <p class="mt-3 text-blue-600 font-bold text-lg">₹999</p>
+                <a href="https://amzn.to/4jPfGCP" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
             </div>
@@ -59,7 +59,7 @@
                 <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Editor’s Choice</span>
                 <h3 class="text-xl font-semibold">Leosportz Unisex Sports Backpack – Drawstring Gym Bag with Shoe Section & Waterproof Design</h3>
                 <p class="text-gray-600 mt-2">Stay organized and dry with this high-capacity gym bag built for everyday athletes.</p>
-                <p class="mt-3 text-green-600 font-bold text-lg">$79.99</p>
+                <p class="mt-3 text-green-600 font-bold text-lg">₹499</p>
                 <a href="https://amzn.to/3ZfRpxx" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -86,7 +86,7 @@
                 <span class="inline-block bg-yellow-300 text-black text-xs px-2 py-1 rounded-full font-semibold mb-2">Best Seller</span>
                 <h3 class="text-xl font-semibold">Minimalist Anti-Acne Face Wash – 2% Salicylic Acid for Pore Cleansing & Oil Control (100 ml)</h3>
                 <p class="text-gray-600 mt-2">Deeply cleanse and clear pores with this gentle exfoliating face wash, suitable for both men and women.</p>
-                <p class="mt-3 text-pink-600 font-bold text-lg">$39.99</p>
+                <p class="mt-3 text-pink-600 font-bold text-lg">₹284</p>
                 <a href="https://amzn.to/439woG9" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-pink-500 hover:bg-pink-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -99,7 +99,7 @@
                 <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Top Pick</span>
                 <h3 class="text-xl font-semibold">Minimalist SPF 30 Hair Serum – Frizz Control with Keratin, Argan Oil & Ceramides (50 ml)</h3>
                 <p class="text-gray-600 mt-2">Ideal for men and women, this non-greasy formula shields hair from heat and sun exposure.</p>
-                <p class="mt-3 text-blue-600 font-bold text-lg">$24.50</p>
+                <p class="mt-3 text-blue-600 font-bold text-lg">₹569</p>
                 <a href="https://amzn.to/4iUt0Vd" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -112,7 +112,7 @@
                 <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Editor’s Choice</span>
                 <h3 class="text-xl font-semibold">Hydrating & Brightening Face Toner – For Oily, Dry & Combination Skin (150ml)</h3>
                 <p class="text-gray-600 mt-2">Gentle, alcohol-free toner for daily use – tightens pores, evens tone, and boosts glow for men & women.</p>
-                <p class="mt-3 text-green-600 font-bold text-lg">$79.99</p>
+                <p class="mt-3 text-green-600 font-bold text-lg">₹394</p>
                 <a href="https://amzn.to/4kdsxP0" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -139,7 +139,7 @@
                 <span class="inline-block bg-yellow-300 text-black text-xs px-2 py-1 rounded-full font-semibold mb-2">Best Seller</span>
                 <h3 class="text-xl font-semibold">GoSriKi Women's Rayon Viscose Printed Anarkali Kurta with Palazzo & Dupatta</h3>
                 <p class="text-gray-600 mt-2">Elegant and comfortable ethnic wear perfect for festive occasions, casual outings, or daily wear.</p>
-                <p class="mt-3 text-pink-600 font-bold text-lg">$39.99</p>
+                <p class="mt-3 text-pink-600 font-bold text-lg">₹799</p>
                 <a href="https://amzn.to/43qigJN" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-pink-500 hover:bg-pink-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -152,7 +152,7 @@
                 <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Top Pick</span>
                 <h3 class="text-xl font-semibold">MAHIRA'S Women’s Short Kurti – Rayon Tunic Top with 3/4 Designer Sleeves</h3>
                 <p class="text-gray-600 mt-2">Stylish and comfortable, perfect for everyday wear or casual outings with an ethnic touch.</p>
-                <p class="mt-3 text-blue-600 font-bold text-lg">$24.50</p>
+                <p class="mt-3 text-blue-600 font-bold text-lg">₹367</p>
                 <a href="https://amzn.to/3Z3n1Xp" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -165,7 +165,7 @@
                 <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Editor’s Choice</span>
                 <h3 class="text-xl font-semibold">MEENAZ Anti-Tarnish Bangle Bracelet – Adjustable Rose Gold Cuff for Women & Girls </h3>
                 <p class="text-gray-600 mt-2">Modern design meets timeless appeal in this adjustable, long-lasting jewelry piece for girls & women.</p>
-                <p class="mt-3 text-green-600 font-bold text-lg">$79.99</p>
+                <p class="mt-3 text-green-600 font-bold text-lg">₹499</p>
                 <a href="https://amzn.to/4iWz9jG" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -192,7 +192,7 @@
                 <span class="inline-block bg-yellow-300 text-black text-xs px-2 py-1 rounded-full font-semibold mb-2">Best Seller</span>
                 <h3 class="text-xl font-semibold">Style Keepers 3-in-1 Pet Grooming Brush Set – Self-Cleaning Bath & Massage Brush with Soap Dispenser</h3>
                 <p class="text-gray-600 mt-2">Perfect for long and short-haired dogs and cats, this kit includes a soft silicone bristle brush for shedding, bathing.</p>
-                <p class="mt-3 text-pink-600 font-bold text-lg">$39.99</p>
+                <p class="mt-3 text-pink-600 font-bold text-lg">₹245</p>
                 <a href="https://amzn.to/42Xgwru" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-pink-500 hover:bg-pink-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -205,7 +205,7 @@
                 <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Top Pick</span>
                 <h3 class="text-xl font-semibold">PSK PET MART Folding Dog Poop Scooper – 24-Inch Pet Waste Picker for Easy Cleanup(Large, Color May Vary)</h3>
                 <p class="text-gray-600 mt-2">Convenient and hygienic solution for picking up pet waste without bending – perfect for walks and outdoor use.</p>
-                <p class="mt-3 text-blue-600 font-bold text-lg">$24.50</p>
+                <p class="mt-3 text-blue-600 font-bold text-lg">₹389</p>
                 <a href="https://amzn.to/3GPCGmB" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -218,7 +218,7 @@
                 <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Editor’s Choice</span>
                 <h3 class="text-xl font-semibold">Pet Steam Brush for Cats & Dogs – 3-in-1 Grooming Tool with Fur Comb & Steam Cleaning Function</h3>
                 <p class="text-gray-600 mt-2">Innovative grooming solution combining combing, steaming, and cleaning to keep your pet’s coat healthy.</p>
-                <p class="mt-3 text-green-600 font-bold text-lg">$79.99</p>
+                <p class="mt-3 text-green-600 font-bold text-lg">₹250</p>
                 <a href="https://amzn.to/43bZ15m" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -245,7 +245,7 @@
                 <span class="inline-block bg-yellow-300 text-black text-xs px-2 py-1 rounded-full font-semibold mb-2">Best Seller</span>
                 <h3 class="text-xl font-semibold">One94Store 3D Galaxy Crystal Ball Night Lamp</h3>
                 <p class="text-gray-600 mt-2">Add a magical touch to your space with this creative 3D engraved crystal ball featuring a mesmerizing galaxy design.</p>
-                <p class="mt-3 text-pink-600 font-bold text-lg">$39.99</p>
+                <p class="mt-3 text-pink-600 font-bold text-lg">₹199</p>
                 <a href="https://amzn.to/4dgX8Jp" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-pink-500 hover:bg-pink-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -258,7 +258,7 @@
                 <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Top Pick</span>
                 <h3 class="text-xl font-semibold">Collectible India Gift Items Metal Krishna Idol Murti with Kamdhenu Cow</h3>
                 <p class="text-gray-600 mt-2">Educational and fun – keeps kids engaged and learning!</p>
-                <p class="mt-3 text-blue-600 font-bold text-lg">$24.50</p>
+                <p class="mt-3 text-blue-600 font-bold text-lg">₹276</p>
                 <a href="https://amzn.to/4keqM4e" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
@@ -271,8 +271,8 @@
                 <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Editor’s Choice</span>
                 <h3 class="text-xl font-semibold"> Desidiya® Panda Touch Silicone Night Lamp</h3>
                 <p class="text-gray-600 mt-2">Adorable. Soft. Glowing comfort. Brighten up bedtime with this cute and huggable Panda lamp</p>
-                <p class="mt-3 text-green-600 font-bold text-lg">$79.99</p>
-                <a href="https://amzn.to/4keqM4e" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
+                <p class="mt-3 text-green-600 font-bold text-lg">₹599</p>
+                <a href="https://amzn.to/3Su1V0q" target="_blank" rel="nofollow sponsored" class="mt-4 block text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-xl transition">Shop Now on Amazon</a>
                 <p class="text-xs text-gray-500 mt-2">As an Amazon Associate, we earn from qualifying purchases.</p>
               </div>
             </div>
