--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" href="/favicon.ico" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8603161147336300"
+     crossorigin="anonymous"></script>
 <body class="bg-white text-gray-800 font-sans">
 
   <!-- Header -->
@@ -135,7 +137,7 @@
         
         <!-- Product 1 -->
             <div class="bg-white shadow-lg rounded-2xl overflow-hidden">
-              <img src="./public/images/fashion/kurta.jpg" alt="Summer Dress" class="w-full h-60 object-contain">
+              <img src="./public/images/fashon/kurta.jpg" alt="Summer Dress" class="w-full h-60 object-contain">
               <div class="p-4">
                 <span class="inline-block bg-yellow-300 text-black text-xs px-2 py-1 rounded-full font-semibold mb-2">Best Seller</span>
                 <h3 class="text-xl font-semibold">GoSriKi Women's Rayon Viscose Printed Anarkali Kurta with Palazzo & Dupatta</h3>
@@ -148,7 +150,7 @@
 
             <!-- Product 2 -->
             <div class="bg-white shadow-lg rounded-2xl overflow-hidden">
-              <img src="./public/images/fashion/casual kurta.jpg" alt="Interactive Toy" class="w-full h-60 object-contain">
+              <img src="./public/images/fashon/casual kurta.jpg" alt="Interactive Toy" class="w-full h-60 object-contain">
               <div class="p-4">
                 <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Top Pick</span>
                 <h3 class="text-xl font-semibold">MAHIRA'S Women’s Short Kurti – Rayon Tunic Top with 3/4 Designer Sleeves</h3>
@@ -161,7 +163,7 @@
 
             <!-- Product 3 -->
             <div class="bg-white shadow-lg rounded-2xl overflow-hidden">
-              <img src="./public/images/fashion/jewellery.jpg" alt="Handbag" class="w-full h-60 object-contain">
+              <img src="./public/images/fashon/jewellery.jpg" alt="Handbag" class="w-full h-60 object-contain">
               <div class="p-4">
                 <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full font-semibold mb-2">Editor’s Choice</span>
                 <h3 class="text-xl font-semibold">MEENAZ Anti-Tarnish Bangle Bracelet – Adjustable Rose Gold Cuff for Women & Girls </h3>
