--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8603161147336300"
      crossorigin="anonymous"></script>
+  <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+  </script>
 </head>
 
 <body class="bg-white text-gray-800 font-sans">
-
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-8603161147336300">
+</amp-auto-ads>
   <!-- Header -->
   <header class="bg-gradient-to-r from-blue-600 to-pink-500 text-white p-6 text-center sticky top-0 z-50 shadow-md">
     <h1 class="text-4xl font-bold">✨ StyleCart – Discover. Fall in Love. Own It.</h1>
